[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/ChatScreen.gd" type="Script" id=1]
[ext_resource path="res://Scripts/WebSocketClientUtil.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.168627, 0.168627, 0.168627, 0.588235 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UserMessageText" type="TextEdit" parent="CanvasLayer"]
margin_left = 18.0
margin_top = 16.0
margin_right = 800.0
margin_bottom = 40.0

[node name="SendButton" type="Button" parent="CanvasLayer"]
margin_left = 808.0
margin_top = 16.0
margin_right = 1000.0
margin_bottom = 40.0
text = "SEND"

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer"]
margin_left = 18.0
margin_top = 56.0
margin_right = 1000.0
margin_bottom = 576.0
custom_styles/bg = SubResource( 1 )

[node name="InteractionDisplay" type="Label" parent="CanvasLayer/ScrollContainer"]
margin_right = 980.0
margin_bottom = 14.0
rect_min_size = Vector2( 980, 0 )
autowrap = true

[node name="WebSocketClient" type="Node" parent="."]
script = ExtResource( 2 )

[connection signal="pressed" from="CanvasLayer/SendButton" to="." method="_on_SendButton_pressed"]
[connection signal="on_data_received" from="WebSocketClient" to="." method="_on_WebSocketClient_on_data_received"]
